--- a/iOSApp.json
+++ b/iOSApp.json
@@ -8013,6 +8013,7 @@
     "FFlagEnableGetValidationRules_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-22T17:09:29",
     "DFFlagAnalyticsServiceCustomEventsEnabled": true,
     "DFFlagAnalyticsServiceHydrationEnabled": true,
+    "FFlagMigratePublishingNewEndpoint_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-22T17:19:14",
     "CaptureCountersIntervalInMinutes": 5,
     "CaptureQTStudioCountersEnabled": true,
     "DFFlagCyclicExecutiveThrottlingCancelWorldStepAccum": false,
@@ -8590,8 +8591,8 @@
     "FFlagAssetPreloadingIXP": true,
     "DFFlagUsingPaginatedFriendsV2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-22T16:40:05",
     "FFlagVideoFrameYuvGPU8_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-22T16:40:08",
-    "FStringFlagRepoGitHashFastString": "d2ee9327a67d439ef008b1a1c8918fa87a3b4d75",
-    "DFStringFlagRepoGitHashDynamicString": "d2ee9327a67d439ef008b1a1c8918fa87a3b4d75",
-    "FStringFlipTimeStampFastString": "2024-10-22T17:12:14.222Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-22T17:12:14.222Z"
+    "FStringFlagRepoGitHashFastString": "8e466bcfc93c37c1f11449a511098c519195b963",
+    "DFStringFlagRepoGitHashDynamicString": "8e466bcfc93c37c1f11449a511098c519195b963",
+    "FStringFlipTimeStampFastString": "2024-10-22T17:19:54.127Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-22T17:19:54.127Z"
 }
