--- a/PCStudioBootstrapper.json
+++ b/PCStudioBootstrapper.json
@@ -146,25 +146,24 @@
     "FFlagChatLineReportShowMostRecentHistory": true,
     "FFlagAXDoNotSendAnalyticsNoItemType": true,
     "FFlagAXFixToggleDefaultHeadAssetId": true,
-    "DFFlagAnimatorRetargetInterpolateFKCorrection": false,
-    "FFlagAnimatorRetargetSkipLowerBodyIK": false,
-    "FFlagEnableRigRetargeterCaching": false,
-    "FFlagBootstrapperEnableOptOutDUAR": true,
+    "DFFlagAnimatorRetargetInterpolateFKCorrection": true,
+    "FFlagAnimatorRetargetSkipLowerBodyIK": true,
+    "FFlagEnableRigRetargeterCaching": true,
+    "FFlagUserFixOrbitalCam": true,
     "FFlagWindowsBootstrapperAdditionalCdnDiagnostics2": true,
+    "FFlagBootstrapperEnableOptOutDUAR": true,
     "FFlagUIBloxUseFullPageModalZIndex": true,
     "FStringWindowsProgressiveDownloadExperimentBucketSettings": "1-10",
-    "FIntBootstrapper64BitStudioPercentage": 100,
     "FFlagWindowsBootstrapperReportPerCdnDownloadSpeeds": true,
+    "FIntBootstrapper64BitStudioPercentage": 100,
     "InfluxInstallHundredthsPercentage": 1,
     "FFlagWindowsInstallerEnableDpiAwareness": true,
     "FFlagWindowsMonitorAnalytics": true,
     "FFlagWindowsStudioFirstLaunchArgument2": true,
     "DFFlagVoiceChatEnableApiSecurityCheck_PlaceFilter": "false;16725311284",
     "FFlagNotificationPersonAddIcons": true,
-    "DFFlagAnimatorRetargetInterpolateFKCorrection_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-22T16:58:18",
-    "FFlagAnimatorRetargetSkipLowerBodyIK_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-22T16:59:09",
-    "FStringFlagRepoGitHashFastString": "f81b48311164f7e7ccfc16f84a44081e438df571",
-    "DFStringFlagRepoGitHashDynamicString": "f81b48311164f7e7ccfc16f84a44081e438df571",
-    "FStringFlipTimeStampFastString": "2024-10-22T17:22:01.817Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-22T17:22:01.817Z"
+    "FStringFlagRepoGitHashFastString": "9126d2f99cef9de065a38fe702fb2c0b43205366",
+    "DFStringFlagRepoGitHashDynamicString": "9126d2f99cef9de065a38fe702fb2c0b43205366",
+    "FStringFlipTimeStampFastString": "2024-10-22T21:52:42.772Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-22T21:52:42.772Z"
 }
