--- a/PCStudioApp.json
+++ b/PCStudioApp.json
@@ -8093,7 +8093,6 @@
     "FStringScreenshotsSupportedUniverses": "6574756904,1489026993,2440500124,1516533665,1415710834,4367208330,2294168059,5668114043,4365819446,2239430935,4523856444,3317771874,1235188606,383310974,1176784616,66654135,5422546686,2380077519,5650396773,5203828273,321778215,4778845442,4795326392",
     "FFlagImproveNameLookup": true,
     "DFLogRCCMonitoring": "Error,0",
-    "FFlagRenderEnableGlobalInstancingD3D11": true,
     "FFlagSQLiteThunkSyscalls_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-24T16:31:08",
     "FFlagEnableFmodCfiFixes_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-24T16:32:24",
     "FFlagEnableNewPSSessionManager2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-24T16:38:12",
@@ -8102,6 +8101,8 @@
     "FFlagRenderFixBeamTrailShadowmap": true,
     "DFStringOpenCloudSupportedMethodNamesCsv_PlaceFilter": "userNotification,ListInventoryItems,GetUniverse,GetPlace,GetGroup,ListGroupMemberships,GetOperation,GenerateUserThumbnail,TranslateText;18224805676",
     "FFlagModernizeSwitchToSettingsApp": true,
+    "DFFlagGetFriendsOnlineFetchNamesFromUserProfiles": true,
+    "FStringScreenshotsExtraInformationUrl_Staged": "https://www.roblox.com/the-haunt;SteadyState;10;30;Rollout;100;30;Promote;2024-10-24T17:32:46",
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
     "CaptureQTStudioCountersEnabled": true,
@@ -9035,6 +9036,7 @@
     "FFlagScreenshotsIsActive_v1": true,
     "DFStringWhiteListedAssetIdForEditting_Staged": "14484458201;SteadyState;10;30;Rollout;100;30;Promote;2024-10-24T16:32:47",
     "FFlagEnableModerationDialog2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-24T16:56:29",
+    "FFlagRenderEnableGlobalInstancingD3D11": true,
     "FFlagShorelinesRemoveDialog": true,
     "FFlagTerrainEditorUseTerrainChannels": true,
     "FFlagEnableAdsMouseUnlock": true,
@@ -9112,7 +9114,6 @@
     "DFFlagFixContainerAsserts": false,
     "FFlagEnableChatLineReporting2": true,
     "FFlagProfilePlatformEnableFriendStatusInQuickLinksEvent": true,
-    "DFFlagGetFriendsOnlineFetchNamesFromUserProfiles": true,
     "FFlagUseCoreLuaSettings2": true,
     "FFlagUIDragDetectorMinMaxDragTranslationFix": true,
     "FFlagUIDragDetectorAddProfiler": true,
@@ -9161,8 +9162,8 @@
     "FFlagSimpleTimerUseRuntimeSyncPrims": true,
     "FFlagEnableVisBugChecks27": true,
     "DFFlagUseVisBugChecks_PlaceFilter": "true;7208091524;7902470429;10489114145;9872472334;8481844229",
-    "FStringFlagRepoGitHashFastString": "db1dc61c0d33248d0e12b449e85b075870c4adc4",
-    "DFStringFlagRepoGitHashDynamicString": "db1dc61c0d33248d0e12b449e85b075870c4adc4",
-    "FStringFlipTimeStampFastString": "2024-10-24T17:24:31.879Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-24T17:24:31.879Z"
+    "FStringFlagRepoGitHashFastString": "e02c191b448ddf9b09a15b5cbf01e607be0b0541",
+    "DFStringFlagRepoGitHashDynamicString": "e02c191b448ddf9b09a15b5cbf01e607be0b0541",
+    "FStringFlipTimeStampFastString": "2024-10-24T17:34:47.559Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-24T17:34:47.559Z"
 }
