--- a/UWPApp.json
+++ b/UWPApp.json
@@ -8093,8 +8093,6 @@
     "FStringScreenshotsSupportedUniverses": "6574756904,1489026993,2440500124,1516533665,1415710834,4367208330,2294168059,5668114043,4365819446,2239430935,4523856444,3317771874,1235188606,383310974,1176784616,66654135,5422546686,2380077519,5650396773,5203828273,321778215,4778845442,4795326392",
     "FFlagImproveNameLookup": true,
     "DFLogRCCMonitoring": "Error,0",
-    "FFlagSQLiteThunkSyscalls_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-24T16:31:08",
-    "FFlagEnableFmodCfiFixes_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-24T16:32:24",
     "FFlagEnableNewPSSessionManager2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-24T16:38:12",
     "FFlagStudioRunServiceMonitorRunState_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-24T16:52:51",
     "DFFlagApplyModelScaleToCageChecks_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-24T16:55:29",
@@ -8103,6 +8101,9 @@
     "FFlagModernizeSwitchToSettingsApp": true,
     "DFFlagGetFriendsOnlineFetchNamesFromUserProfiles": true,
     "FStringScreenshotsExtraInformationUrl_Staged": "https://www.roblox.com/the-haunt;SteadyState;10;30;Rollout;100;30;Promote;2024-10-24T17:32:46",
+    "FFlagEnableGenericChallengeResponseHandling_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-24T17:36:41",
+    "FFlagEnableFmodCfiFixes": true,
+    "FFlagSQLiteThunkSyscalls": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -8311,8 +8312,8 @@
     "FFlagScreenshotsSetupEnabled_v1": true,
     "FFlagUserFixOrbitalCam": true,
     "FFlagScreenshotsIsActive_v1": true,
-    "FStringFlagRepoGitHashFastString": "e02c191b448ddf9b09a15b5cbf01e607be0b0541",
-    "DFStringFlagRepoGitHashDynamicString": "e02c191b448ddf9b09a15b5cbf01e607be0b0541",
-    "FStringFlipTimeStampFastString": "2024-10-24T17:34:47.559Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-24T17:34:47.559Z"
+    "FStringFlagRepoGitHashFastString": "699ac0ea0d5c814e36907eacaec91c03027594bc",
+    "DFStringFlagRepoGitHashDynamicString": "699ac0ea0d5c814e36907eacaec91c03027594bc",
+    "FStringFlipTimeStampFastString": "2024-10-24T17:38:43.282Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-24T17:38:43.282Z"
 }
