--- a/PCStudioBootstrapper.json
+++ b/PCStudioBootstrapper.json
@@ -150,6 +150,7 @@
     "FFlagAnimatorRetargetSkipLowerBodyIK": true,
     "FFlagEnableRigRetargeterCaching": true,
     "FFlagUserFixOrbitalCam": true,
+    "FFlagEnableAnimatorAnalyticsForRetargeting": true,
     "FFlagWindowsBootstrapperAdditionalCdnDiagnostics2": true,
     "FFlagBootstrapperEnableOptOutDUAR": true,
     "FFlagUIBloxUseFullPageModalZIndex": true,
@@ -162,8 +163,8 @@
     "FFlagWindowsStudioFirstLaunchArgument2": true,
     "DFFlagVoiceChatEnableApiSecurityCheck_PlaceFilter": "false;16725311284",
     "FFlagNotificationPersonAddIcons": true,
-    "FStringFlagRepoGitHashFastString": "a337f995ec4fd578dc93a44d8237c09f878f1ce3",
-    "DFStringFlagRepoGitHashDynamicString": "a337f995ec4fd578dc93a44d8237c09f878f1ce3",
-    "FStringFlipTimeStampFastString": "2024-10-24T18:31:19.002Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-24T18:31:19.002Z"
+    "FStringFlagRepoGitHashFastString": "b3579fcaa2dd60231389d4b3caf9adefa37cfa92",
+    "DFStringFlagRepoGitHashDynamicString": "b3579fcaa2dd60231389d4b3caf9adefa37cfa92",
+    "FStringFlipTimeStampFastString": "2024-10-25T17:31:30.751Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-25T17:31:30.751Z"
 }
