--- a/MacStudioApp.json
+++ b/MacStudioApp.json
@@ -6315,7 +6315,7 @@
     "FFlagLuaAppBatchSingleFetches2": true,
     "FStringVNGWebshopUrl": "https://shop.vnggames.com/vn/game/roblox",
     "FFlagAllowVngWebshopDomainInBrowserService": true,
-    "FFlagUIDragDetector2_PlaceFilter": "true;99381597249674;13905922711;15578716287;18436122805;118862273644256;18476427401;103499286873817;137193034580367;101798703098330;15146539887;77786750565667;116345658304924;10717130601;3954807453;15381090708;74749613936308;12403053931;94171813366720;16280203155;9298140656;86254431744522;7058101982;7789273552;6411554157;77170478265331;5223287266;18808135322;6773468499;11765402359;17069498206;16931515487;16896790433;11761274032;11764980869;16926077853;11828796994;11753029192;13965228772",
+    "FFlagUIDragDetector2_PlaceFilter": "true;99381597249674;13905922711;15578716287;18436122805;118862273644256;18476427401;103499286873817;137193034580367;101798703098330;15146539887;77786750565667;116345658304924;10717130601;3954807453;15381090708;74749613936308;12403053931;94171813366720;16280203155;9298140656;86254431744522;7058101982;7789273552;6411554157;77170478265331;5223287266;18808135322;6773468499;11765402359;17069498206;16931515487;16896790433;11761274032;11764980869;16926077853;11828796994;11753029192;13965228772;84377627725805",
     "DFFlagHeatmapServiceEnabled": true,
     "FFlagStudioAddMachineValidationToModerationCheck": true,
     "FFlagStudioRemoveMachineValidationCallOnAssetUpload": true,
@@ -7367,7 +7367,6 @@
     "FFlagStudioHideWithDataModelContextImpl": true,
     "FFlagGuiServiceTrackLayoutTimeForPerfTests": true,
     "FFlagXboxDoNotDestroySurfaceViewOnRestartLuaApp": true,
-    "DFIntRobloxTelemetryPointV2ProdTrafficPercent": 1,
     "FFlagConvertAccessoryCopyHandleMaterial": true,
     "FFlagAXRemoveVerticalDrawerPadding": true,
     "FFlagRecordStartRaceFix2": true,
@@ -7612,7 +7611,6 @@
     "DFFlagImFedUp": true,
     "FFlagUpdateLocalPlayerUsageBlockingUtility": true,
     "FFlagCapsStudioPropWidget": true,
-    "FFlagEnableRbxPostAPI_PlaceFilter": "true;82695214392018",
     "FFlagVisBugFixSpecialMeshScale": true,
     "FFlagVisBugThreadCap": true,
     "DFFlagVideoAddSessionTrackingFeatureField": true,
@@ -8042,7 +8040,7 @@
     "DFFlagPhoto2AvatarReturnJobId": true,
     "DFFlagAddNewToleranceFunctions": true,
     "FFlagViewportEnvMapAssetFix": true,
-    "DFFlagUsingPaginatedFriendsV2": true,
+    "DFFlagUsingPaginatedFriendsV2": false,
     "DFIntSendRakNetStatsInterval": 60,
     "FFlagLuaAppFixWebViewUnderlyingBackButton": true,
     "FFlagPlayStationgetMBSysRAMuseTotalMem2": true,
@@ -8117,15 +8115,30 @@
     "FFlagMoveUGCValidationFromAssetService2": true,
     "FFlagMoveUGCValidationFunctionFeature": true,
     "FFlagUGCValidationCallbackResultStrings": true,
-    "FFlagAXShowRefinementButtonAvatarWidget3": true,
+    "FFlagAXShowRefinementButtonAvatarWidget3": false,
     "FStringSuppressMutedErrorKeys": "AdjustAccessoryView",
     "FStringAvatarDeepLinkPattern": "roblox.*://navigation/avatar.*",
     "FFlagUpdateComposerScreenInsets": true,
     "FFlagFixParticleEmitterLocalTransparencyModifierEnvelope": true,
     "FFlagFixCapturesExperiencesOverride": true,
-    "FFlagEnableSplitButtonWithoutActionDropdown_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-25T17:08:55",
-    "FFlagHideCoreGui_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-25T17:20:56",
-    "DFIntPacketMissingFrameWindowReportIntervalSec_Staged": "60000;SteadyState;10;30;Rollout;100;30;Promote;2024-10-25T17:30:30",
+    "FFlagEnableSplitButtonWithoutActionDropdown": true,
+    "FFlagHideCoreGui": true,
+    "DFIntPacketMissingFrameWindowReportIntervalSec": 60000,
+    "FFlagAllowSoundServiceIgnoreGameSettings": true,
+    "FFlagEnableCoreVoiceManagerEmitOnReportJoinFailed": true,
+    "FFlagEnableTopBarIconButtonBackgroundProps": true,
+    "FFlagEnableCrossDMEventSequencing": true,
+    "FFlagJoinCrossExpVoiceWithPartyId": true,
+    "DFIntBatchPostLimit": 20,
+    "FFlagInsertServiceIsLocalFileFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:38:59",
+    "DFFlagMeasureMissedProcessPackets2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:39:42",
+    "FFlagVoiceChatStopSendingIceCandidate": false,
+    "FFlagUseCoreDebugSettings2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:10:13",
+    "DFFlagSimAeroEnableFluidForceSensor_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:10:52",
+    "FFlagDeprecateIos12Apis_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:14:59",
+    "FFlagEnableLifeCycleManagerLua": true,
+    "FFlagRenderReportGfxTechnology": true,
+    "FFlagRenderTestWaitForPendingUpdates6": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -9044,7 +9057,7 @@
     "FFlagSimEnableEditablePermissionCheck": true,
     "DFStringWhiteListedAssetIdForEditting": 14484458201,
     "FFlagContentNetworkSchema2": true,
-    "FFlagLuaAppDeprecateGamesApiCalls": true,
+    "FFlagLuaAppDeprecateGamesApiCalls": false,
     "FFlagLuaAppSlpAnalyticsFixes": true,
     "DFFlagSandboxedInstanceModeProperty": true,
     "FFlagMaterialGeneratorCounterEnabled": true,
@@ -9063,9 +9076,10 @@
     "DFIntMultiPartUploadConcurrentRequestLimit": 2,
     "FFlagLuauUserTypeFunFixNoReadWrite": true,
     "FFlagEnableStartPageBridge": true,
-    "FFlagStudioRemoveOptionalToTasksMakeError_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-25T16:52:00",
+    "FFlagStudioRemoveOptionalToTasksMakeError": true,
     "FFlagRenderEnableGlobalInstancingMetal": true,
-    "FFlagVoiceChatStopSendingIceCandidate": false,
+    "FFlagLuauRemoveNotAnyHack_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:54:01",
+    "FFlagNoDynamicCastInResizableTooltipWidget_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:14:35",
     "FFlagShorelinesRemoveDialog": true,
     "FFlagTerrainEditorUseTerrainChannels": true,
     "FFlagEnableAdsMouseUnlock": true,
@@ -9175,8 +9189,14 @@
     "FFlagDragDetectorCounterEnabled": true,
     "FFlagGameBasicSettingsFramerateCap5": true,
     "DFFlagSendCapabilityTelemetry": true,
-    "FFlagRefactorTeleportServiceGlobalFields4_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-25T17:07:57",
+    "FFlagRefactorTeleportServiceGlobalFields4": true,
+    "DFIntCapabilityTelemetryThrottleHundredthsPercent": 1,
     "FLogSignalRNotification": 0,
+    "DFFlagCapsCallableCheck_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:40:13",
+    "DFIntCapabilityUnassignedUseHundredthsPercentage_Staged": "1;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:41:30",
+    "DFIntCapabilityRegularUseHundredthsPercentage_Staged": "1;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:42:15",
+    "DFFlagEnableDeviceMemoryPercentageForHarmony_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:21:57",
+    "DFFlagReportMoreMemoryStatsInMemoryProfilingSnapshots": true,
     "FStringFeature_CookieProtocolEnabled": "496;100",
     "FFlagDebugLuaAppValidateProps": true,
     "DFLogTrackHttpRequest": 0,
@@ -9189,8 +9209,9 @@
     "FFlagAudioEqualizerEditorSanitizeMidRange": true,
     "FFlagSceneHashMaps4": true,
     "FFlagEnableVisBugChecks27": true,
-    "FStringFlagRepoGitHashFastString": "b3579fcaa2dd60231389d4b3caf9adefa37cfa92",
-    "DFStringFlagRepoGitHashDynamicString": "b3579fcaa2dd60231389d4b3caf9adefa37cfa92",
-    "FStringFlipTimeStampFastString": "2024-10-25T17:31:30.751Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-25T17:31:30.751Z"
+    "FFlagEnableAnimatorAnalyticsForRetargeting_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:28:29",
+    "FStringFlagRepoGitHashFastString": "5200899736a2b49655df4ab9743265ae3eeccdcb",
+    "DFStringFlagRepoGitHashDynamicString": "5200899736a2b49655df4ab9743265ae3eeccdcb",
+    "FStringFlipTimeStampFastString": "2024-10-28T17:28:12.277Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-28T17:28:12.277Z"
 }
