--- a/iOSApp.json
+++ b/iOSApp.json
@@ -7367,7 +7367,6 @@
     "FFlagStudioHideWithDataModelContextImpl": true,
     "FFlagGuiServiceTrackLayoutTimeForPerfTests": true,
     "FFlagXboxDoNotDestroySurfaceViewOnRestartLuaApp": true,
-    "DFIntRobloxTelemetryPointV2ProdTrafficPercent": 1,
     "FFlagConvertAccessoryCopyHandleMaterial": true,
     "FFlagAXRemoveVerticalDrawerPadding": true,
     "FFlagRecordStartRaceFix2": true,
@@ -7612,7 +7611,6 @@
     "DFFlagImFedUp": true,
     "FFlagUpdateLocalPlayerUsageBlockingUtility": true,
     "FFlagCapsStudioPropWidget": true,
-    "FFlagEnableRbxPostAPI_PlaceFilter": "true;82695214392018",
     "FFlagVisBugFixSpecialMeshScale": true,
     "FFlagVisBugThreadCap": true,
     "DFFlagVideoAddSessionTrackingFeatureField": true,
@@ -8042,7 +8040,7 @@
     "DFFlagPhoto2AvatarReturnJobId": true,
     "DFFlagAddNewToleranceFunctions": true,
     "FFlagViewportEnvMapAssetFix": true,
-    "DFFlagUsingPaginatedFriendsV2": true,
+    "DFFlagUsingPaginatedFriendsV2": false,
     "DFIntSendRakNetStatsInterval": 60,
     "FFlagLuaAppFixWebViewUnderlyingBackButton": true,
     "FFlagPlayStationgetMBSysRAMuseTotalMem2": true,
@@ -8117,15 +8115,30 @@
     "FFlagMoveUGCValidationFromAssetService2": true,
     "FFlagMoveUGCValidationFunctionFeature": true,
     "FFlagUGCValidationCallbackResultStrings": true,
-    "FFlagAXShowRefinementButtonAvatarWidget3": true,
+    "FFlagAXShowRefinementButtonAvatarWidget3": false,
     "FStringSuppressMutedErrorKeys": "AdjustAccessoryView",
     "FStringAvatarDeepLinkPattern": "roblox.*://navigation/avatar.*",
     "FFlagUpdateComposerScreenInsets": true,
     "FFlagFixParticleEmitterLocalTransparencyModifierEnvelope": true,
     "FFlagFixCapturesExperiencesOverride": true,
-    "FFlagEnableSplitButtonWithoutActionDropdown_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-25T17:08:55",
-    "FFlagHideCoreGui_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-25T17:20:56",
-    "DFIntPacketMissingFrameWindowReportIntervalSec_Staged": "60000;SteadyState;10;30;Rollout;100;30;Promote;2024-10-25T17:30:30",
+    "FFlagEnableSplitButtonWithoutActionDropdown": true,
+    "FFlagHideCoreGui": true,
+    "DFIntPacketMissingFrameWindowReportIntervalSec": 60000,
+    "FFlagAllowSoundServiceIgnoreGameSettings": true,
+    "FFlagEnableCoreVoiceManagerEmitOnReportJoinFailed": true,
+    "FFlagEnableTopBarIconButtonBackgroundProps": true,
+    "FFlagEnableCrossDMEventSequencing": true,
+    "FFlagJoinCrossExpVoiceWithPartyId": true,
+    "DFIntBatchPostLimit": 20,
+    "FFlagRenderReportGfxTechnology_Rollout": "true;60;2024-10-28T16:22:14",
+    "FFlagRenderTestWaitForPendingUpdates6_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:25:22",
+    "FFlagInsertServiceIsLocalFileFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:38:59",
+    "DFFlagMeasureMissedProcessPackets2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:39:42",
+    "FFlagUseCoreLuaSettings2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:07:48",
+    "FFlagUseCoreDebugSettings2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:10:13",
+    "DFFlagSimAeroEnableFluidForceSensor_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:10:52",
+    "FFlagDeprecateIos12Apis_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:14:59",
+    "FFlagEnableLifeCycleManagerLua": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -8704,15 +8717,16 @@
     "FFlagEnableExperienceInviteLinkTypeAttribution": true,
     "FFlagTopSearchReportRowOnPage_1": true,
     "FFlagUserSearchReportRowOnPage": true,
-    "FFlagLuaAppDeprecateGamesApiCalls": true,
+    "FFlagLuaAppDeprecateGamesApiCalls": false,
     "FFlagAXFilterValuesLogging": true,
     "FFlagLuaAppSlpAnalyticsFixes": true,
     "FFlagAXLogFiltersForOrganicClick3": true,
     "FFlagScreenshotsIsActive_v1": true,
     "FFlagScreenshotsAddCustomToastDuration": true,
     "FFlagSendWebViewUserAgentEnabledIOS": true,
-    "FStringFlagRepoGitHashFastString": "b3579fcaa2dd60231389d4b3caf9adefa37cfa92",
-    "DFStringFlagRepoGitHashDynamicString": "b3579fcaa2dd60231389d4b3caf9adefa37cfa92",
-    "FStringFlipTimeStampFastString": "2024-10-25T17:31:30.751Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-25T17:31:30.751Z"
+    "FFlagGetFriendCountFromNetwork": true,
+    "FStringFlagRepoGitHashFastString": "57bd8003611bf3ba1e7de6979ff72ac82f76ad84",
+    "DFStringFlagRepoGitHashDynamicString": "57bd8003611bf3ba1e7de6979ff72ac82f76ad84",
+    "FStringFlipTimeStampFastString": "2024-10-28T17:23:18.480Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-28T17:23:18.480Z"
 }
